添加了hello页面

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,10 @@
     空白，不过不要太长了，不然后面的helloworld就被挤下去了。</p>
     <h2 style="text-align:center;">还有：Hello, World! </h2>
     <h4>然后这里有什么呢？都是一些测试页面：</h4>
-    <a href="{{ url_for('move') }}">CSS移动</a>
+    <p>
+        <a href="{{ url_for('hello') }}">Hello, World!</a><br>
+        <a href="{{ url_for('move') }}">CSS移动</a>
+    </p>
+    
 </body>
 </html>
