--- a/templates/learn/1.html
+++ b/templates/learn/1.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Hello World</title>
+    <meta charset="utf-8" />
+    <title>测试</title>
     <style>
         .button {
             background-color: rgb(145, 224, 255);
             border: none;
             color: white;
-            padding: 5px 12px;
+            padding: 15px 32px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 15px;
+            font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
         }
     </style>
 </head>
+
 <body>
-    <h1 style="text-align:center;">Hello, World!</h1>
+    <h2>CSS</h2>
+
     <a href="{{ url_for('index') }}" class="button">返回首页</a>
 </body>
+
 </html>
