--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>首页</title>
+    <meta charset="utf-8" />
+    <title>首页</title>
+    <style>
+        .button {
+            background-color: rgb(132, 255, 189);
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+    </style>
 </head>
+
 <body>
-	<h1 style="text-align:center;">页面</h1>
+    <h1 style="text-align:center;">页面</h1>
     <p style="text-align:center;">
-    某些段落，里面可以写一些东西，最好长一点，用来填补这辽阔的
-    空白，不过不要太长了，不然后面的helloworld就被挤下去了。</p>
-    <h2 style="text-align:center;">还有：Hello, World! </h2>
+        某些段落，里面可以写一些东西，最好长一点，用来填补这辽阔的
+        空白，不过不要太长了，不然后面的helloworld就被挤下去了。
+    </p>
+    <h2 style="text-align:center;">还有：Hello, World!</h2>
     <h4>然后这里有什么呢？都是一些测试页面：</h4>
     <p>
-        <a href="{{ url_for('hello') }}">Hello, World!</a><br>
-        <a href="{{ url_for('move') }}">CSS移动</a>
+        <a href="{{ url_for('hello') }}" class="button">Hello, World!</a><br />
+        <a href="{{ url_for('move') }}" class="button">CSS移动</a>
     </p>
-    
 </body>
+
 </html>
