该扩充的扩充，该润色的润色

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,43 @@
     <head>
       <meta charset='UTF-8'>
       <title>编程小站</title>
+
+      <style>
+        body{
+          background-color:#d0e4fe;
+        }
+        h1{
+          color:orange;
+        }
+        h3{
+          color: bisque;
+          text-align: center;
+          font-size: 30px;
+        }
+        p{
+          font-family:"Times New Roman";
+          font-size:20px;
+          text-align: center;
+        }
+        
+        </style>
     </head>
+    
 <body>
-  编程是编定程序的中文简称，就是让计算机代为解决某个问题，对某个计算
-  <br>
-  体系规定一定的运算方式，使计算体系按照该计算方式运行，并最终得到相应结果的过程。
-  <br>
-  为了使计算机能够理解人的意图，人类就必须将需解决的问题的思路、方法和手段通过计算机能够理解的形式告诉计算机，使得计算机能
-  <br>
-  够根据人的指令一步一步去工作，完成某种特定的任务。这种人和计算体系之间交流的过程就是编程。
+  <a href="/" style="color:orange;font-family:'Times New Roman';
+  background-color:aquamarine;
+  font-size: 40px;padding-top:25px;padding-bottom:25px;
+	padding-right:50px;
+	padding-left:50px;">编程小站</a>
+  <h3>什么是编程</h3>
+  <p>
+    编程是编定程序的中文简称，就是让计算机代为解决某个问题，对某个计算
+    <br>
+    体系规定一定的运算方式，使计算体系按照该计算方式运行，并最终得到相应结果的过程。
+    <br>
+    为了使计算机能够理解人的意图，人类就必须将需解决的问题的思路、方法和手段通过计算机能够理解的形式告诉计算机，使得计算机能
+    <br>
+    够根据人的指令一步一步去工作，完成某种特定的任务。这种人和计算体系之间交流的过程就是编程。
+  </p>
 </body>
 </html>
