--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
+<!-- 
       <meta charset='UTF-8'>
       <title>编程小站</title>
-
       <style>
         body{
           background-color:#d0e4fe;
@@ -12,7 +9,7 @@
           color:orange;
         }
         h3{
-          color: bisque;
+          color:aqua;
           text-align: center;
           font-size: 30px;
         }
@@ -30,8 +27,8 @@
   background-color:aquamarine;
   font-size: 40px;padding-top:25px;padding-bottom:25px;
 	padding-right:50px;
-	padding-left:50px;">编程小站</a>
-  <h3>什么是编程</h3>
+	padding-left:50px;">编程小站</a> 
+  <div style="font-family: '宋体';">什么是编程</div>
   <p>
     编程是编定程序的中文简称，就是让计算机代为解决某个问题，对某个计算
     <br>
@@ -41,5 +38,43 @@
     <br>
     够根据人的指令一步一步去工作，完成某种特定的任务。这种人和计算体系之间交流的过程就是编程。
   </p>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html>
+<head>
+	<style>
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 200px;
+        background-color: #f1f1f1;
+        font-family: '华文行楷';
+    }
+     
+    li a {
+        display: block;
+        color: #000;
+        padding: 8px 16px;
+        text-decoration: none;
+        font-family: '华文行楷';
+    }
+    /* 鼠标移动到选项上修改背景颜色 */
+    li a:hover {
+        background-color: #555;
+        color: white;
+        font-family: '华文行楷';
+    }
+    
+    </style>
+</head>
+<body>
+  <ul>
+    <li><a href="#home">主页</a></li>
+    <li><a href="#news">新闻</a></li>
+    <li><a href="#contact">联系</a></li>
+    <li><a href="#about">关于</a></li>
+    </ul>
 </body>
 </html>
