--- a/templates/index.html
+++ b/templates/index.html
@@ -42,39 +42,93 @@
 </html> -->
 <!DOCTYPE html>
 <html>
+
 <head>
 	<style>
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        width: 200px;
-        background-color: #f1f1f1;
-        font-family: '华文行楷';
-    }
-     
-    li a {
-        display: block;
-        color: #000;
-        padding: 8px 16px;
-        text-decoration: none;
-        font-family: '华文行楷';
-    }
-    /* 鼠标移动到选项上修改背景颜色 */
-    li a:hover {
-        background-color: #555;
-        color: white;
-        font-family: '华文行楷';
-    }
-    
-    </style>
+		h3 {
+			color: orange;
+			text-align: center;
+			font-size: 30px;
+		}
+
+		ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+
+		li {
+			float: left;
+		}
+
+		a {
+			display: block;
+			background-color: pink;
+			color: white;
+			width: 80px;
+			text-align: center;
+			padding: 4px 0px;
+			text-decoration: none;
+		}
+
+		a:hover,
+		a:active {
+			background-color: gray;
+		}
+
+		/* 鼠标移动到选项上修改背景颜色 */
+		li a:hover {
+			background-color: #555;
+			color: white;
+			font-family: "宋体";
+		}
+		#search
+        {
+            float: right;
+			font-size: 28px;
+        }
+	</style>
+	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-  <ul>
-    <li><a href="#home">主页</a></li>
-    <li><a href="#news">新闻</a></li>
-    <li><a href="#contact">联系</a></li>
-    <li><a href="#about">关于</a></li>
-    </ul>
+	<a href="/" style="color:orange;font-family:'Times New Roman';display:block;:aquamarine;
+		font-size: 20px;padding-top:25px;padding-bottom:25px;margin-left:10px;
+		  padding-right:20px;
+		  padding-left:20px;">编程小站</a>
+	<p style="float: right;font-size: 20px;">hello, world!</p>
+	<ul>
+		<li><a href="/">主页</a></li>
+		<li><a href="#news">新闻</a></li>
+		<li><a href="#contact">联系</a></li>
+		<li><a href="#about">关于</a></li>
+	</ul>
+	<div class="panel-group" id="accordion">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h4 class="panel-title">
+					<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
+						style="font-family:'宋体';text-align: center;">
+						什么是编程
+					</a>
+				</h4>
+			</div>
+			<div id="collapseOne" class="panel-collapse collapse in">
+				<div class="panel-body" , style="font-family:'宋体';font-size:20px;text-align: center;">
+					编程是编定程序的中文简称，就是让计算机代为解决某个问题，对某个计算
+					<br />
+					体系规定一定的运算方式，使计算体系按照该计算方式运行，并最终得到相应结果的过程。
+					<br />
+					为了使计算机能够理解人的意图，人类就必须将需解决的问题的思路、方法和手段通过计算机能够理解的形式告诉计算机，使得计算机能
+					<br />
+					够根据人的指令一步一步去工作，完成某种特定的任务。这种人和计算体系之间交流的过程就是编程。
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
