--- a/templates/index.html
+++ b/templates/index.html
@@ -44,12 +44,6 @@
 <html>
     <head>
         <style>
-            h3 {
-                color: orange;
-                text-align: center;
-                font-size: 30px;
-            }
-
             ul {
                 list-style-type: none;
                 margin: 0;
@@ -61,26 +55,20 @@
                 float: left;
             }
 
-            a {
+          li  a {
                 display: block;
-                background-color: pink;
+                background-color: rgb(0, 0, 0);
                 color: white;
                 width: 80px;
                 text-align: center;
                 padding: 4px 0px;
                 text-decoration: none;
-            }
-
-            a:hover,
-            a:active {
-                background-color: gray;
-            }
-
+          }
             /* 鼠标移动到选项上修改背景颜色 */
             li a:hover {
-                background-color: #555;
-                color: white;
-                font-family: "宋体";
+                background-color: rgb(20, 143, 224);
+                color: rgb(16, 49, 235);
+                font-family: "华文行楷";
             }
             #search {
                 float: right;
@@ -93,24 +81,61 @@
         />
         <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
+      
     </head>
 
     <body>
-        <a
+           <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1595040432203&di=e63d654fb0c383c21f2af90b2731111e&imgtype=0&src=http%3A%2F%2Fimg.juimg.com%2Ftuku%2Fyulantu%2F120522%2F188133-120522141A665.jpg" alt="科技配图"width="400" height="200"> 
+        
+        <!-- <a
             href="/"
             style="color:orange;font-family:'Times New Roman';display:block;:aquamarine;
 		font-size: 20px;padding-top:25px;padding-bottom:25px;margin-left:10px;
 		  padding-right:20px;
 		  padding-left:20px;"
             >编程小站</a
-        >
-        <p style="float: right;font-size: 20px;">hello, world!</p>
+        > -->
+        
+        <!-- 空格调整格式 -->
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+        &nbsp
+ <!-- 新增按钮 -->
+        <button id="注册按钮" style="background: #3d83fa;color: #06f7e3">注册</button>
+        <button id="注册按钮" style="background: #3d83fa;color: #06f7e3">登录</button>
+        
+        <!-- 编写导航栏 -->
         <ul>
             <li><a href="/">主页</a></li>
-            <li><a href="#news">新闻</a></li>
-            <li><a href="#contact">联系</a></li>
-            <li><a href="#about">关于</a></li>
+            <li><a href="/Python">Python教程</a></li>
+            <li><a href="/C++教程">C++教程</a></li>
+            <li><a href="/关于我们">关于我们</a></li>
         </ul>
+
         <div class="panel-group" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -119,18 +144,20 @@
                             data-toggle="collapse"
                             data-parent="#accordion"
                             href="#collapseOne"
-                            style="font-family:'宋体';text-align: center;"
+                            style="font-family:'华文行楷';text-align: center;"
                         >
-                            什么是编程
+                            
                         </a>
                     </h4>
                 </div>
+
                 <div id="collapseOne" class="panel-collapse collapse in">
                     <div
                         class="panel-body"
                         ,
-                        style="font-family:'宋体';font-size:20px;text-align: center;"
+                        style="font-family:'华文行楷';font-size:20px;text-align: center;"
                     >
+                    <!-- 程序介绍 -->
                         编程是编定程序的中文简称，就是让计算机代为解决某个问题，对某个计算
                         <br />
                         体系规定一定的运算方式，使计算体系按照该计算方式运行，并最终得到相应结果的过程。
@@ -138,6 +165,9 @@
                         为了使计算机能够理解人的意图，人类就必须将需解决的问题的思路、方法和手段通过计算机能够理解的形式告诉计算机，使得计算机能
                         <br />
                         够根据人的指令一步一步去工作，完成某种特定的任务。这种人和计算体系之间交流的过程就是编程。
+                        <br>
+                        <br>
+
                     </div>
                 </div>
             </div>
