--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{% title %}</title>
+        <title>{{ title }}</title>
     </head>
     <body>
-        {% text %}
+            {% autoescape None %}
+        {% raw text %}
     </body>
 </html>
