--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,7 @@
             <li><a href="/">主页</a></li>
             <li><a href="/Python">Python教程</a></li>
             <li><a href="/C++教程">C++教程</a></li>
-            <li><a href="/关于我们">关于我们</a></li>
+            <li><a href="/about">关于我们</a></li>
         </ul>
 
         <div class="panel-group" id="accordion">
@@ -146,7 +146,7 @@
                             href="#collapseOne"
                             style="font-family:'华文行楷';text-align: center;"
                         >
-                            
+                            什么是编程？
                         </a>
                     </h4>
                 </div>
