--- a/templates/index.html
+++ b/templates/index.html
@@ -1,140 +1,14 @@
-<!-- 
-      <meta charset='UTF-8'>
-      <title>编程小站</title>
-      <style>
-        body{
-          background-color:#d0e4fe;
-        }
-        h1{
-          color:orange;
-        }
-        h3{
-          color:aqua;
-          text-align: center;
-          font-size: 30px;
-        }
-        p{
-          font-family:"Times New Roman";
-          font-size:20px;
-          text-align: center;
-        }
-        
-        </style>
-    </head>
+{% extends 'base.html' %}
+{% block content %}
+
     
-<body>
-  <a href="/" style="color:orange;font-family:'Times New Roman';
-  background-color:aquamarine;
-  font-size: 40px;padding-top:25px;padding-bottom:25px;
-	padding-right:50px;
-	padding-left:50px;">编程小站</a> 
-  <div style="font-family: '宋体';">什么是编程</div>
-  <p>
-    编程是编定程序的中文简称，就是让计算机代为解决某个问题，对某个计算
-    <br>
-    体系规定一定的运算方式，使计算体系按照该计算方式运行，并最终得到相应结果的过程。
-    <br>
-    为了使计算机能够理解人的意图，人类就必须将需解决的问题的思路、方法和手段通过计算机能够理解的形式告诉计算机，使得计算机能
-    <br>
-    够根据人的指令一步一步去工作，完成某种特定的任务。这种人和计算体系之间交流的过程就是编程。
-  </p>
-</body>
-</html> -->
-<!DOCTYPE html>
-<html>
-    <head>
-        <style>
-            ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-            }
+<link
+    rel="stylesheet"
+    href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+/>
+<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-            li {
-                float: left;
-            }
-
-          li  a {
-                display: block;
-                background-color: rgb(0, 0, 0);
-                color: white;
-                width: 80px;
-                text-align: center;
-                padding: 4px 0px;
-                text-decoration: none;
-          }
-            /* 鼠标移动到选项上修改背景颜色 */
-            li a:hover {
-                background-color: rgb(20, 143, 224);
-                color: rgb(16, 49, 235);
-                font-family: "华文行楷";
-            }
-            #search {
-                float: right;
-                font-size: 28px;
-            }
-        </style>
-        <link
-            rel="stylesheet"
-            href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
-        />
-        <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-        <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
-      
-    </head>
-
-    <body>
-           <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1595040432203&di=e63d654fb0c383c21f2af90b2731111e&imgtype=0&src=http%3A%2F%2Fimg.juimg.com%2Ftuku%2Fyulantu%2F120522%2F188133-120522141A665.jpg" alt="科技配图"width="400" height="200"> 
-        
-        <!-- <a
-            href="/"
-            style="color:orange;font-family:'Times New Roman';display:block;:aquamarine;
-		font-size: 20px;padding-top:25px;padding-bottom:25px;margin-left:10px;
-		  padding-right:20px;
-		  padding-left:20px;"
-            >编程小站</a
-        > -->
-        
-        <!-- 空格调整格式 -->
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
-        &nbsp
- <!-- 新增按钮 -->
-        <button id="注册按钮" style="background: #3d83fa;color: #06f7e3">注册</button>
-        <button id="注册按钮" style="background: #3d83fa;color: #06f7e3">登录</button>
-        
-        <!-- 编写导航栏 -->
-        <ul>
-            <li><a href="/">主页</a></li>
-            <li><a href="/Python">Python教程</a></li>
-            <li><a href="/C++教程">C++教程</a></li>
-            <li><a href="/about">关于我们</a></li>
-        </ul>
 
         <div class="panel-group" id="accordion">
             <div class="panel panel-default">
@@ -172,5 +46,4 @@
                 </div>
             </div>
         </div>
-    </body>
-</html>
+{% endblock content %}
