--- a/spwb/templates/base.html
+++ b/spwb/templates/base.html
@@ -40,12 +40,10 @@
     {% endblock head %}
   </head>
   <body>
-    <ul>
+    <ul style="font-family: 宋体;">
       <li><a class="active" href="{{ url_for('index') }}">主页</a></li>
-      <li><a href="#xxx">学习中心</a></li>
       <li><a href="{{ url_for('about') }}">关于我们</a></li>
-      <li><a href="#about">注册账号</a></li>
-      <li><a href="#sum">登录账号</a></li>
+
     </ul>
     <br>
     <br>
