--- a/spwb/templates/blog/blog.html
+++ b/spwb/templates/blog/blog.html
@@ -1,52 +1,6 @@
-<!DOCTYPE html>
-<html style="font-family: 宋体;">
-  <head>
-    <meta charset="utf-8" />
-    <title>{{ title }}</title>
-    <style>
-      /*显示导航栏*/
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
-      }
-
-      li {
-        float: left;
-      }
-
-      li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      li a:hover {
-        background-color: #111;
-      }
-      /*在顶端固定导航栏*/
-      ul {
-        position: fixed;
-        top: 0;
-        width: 100%;
-      }
-    </style>
-    
-  </head>
-  <body>
-    <ul>
-      <li><a class="active" href="{{ url_for('index') }}">主页</a></li>
-      <li><a href="{{ url_for('about') }}">关于我们</a></li>
-      <li><a href="#开头">回到开头↑</a></li>
-    </ul>
-    <br id="开头">  <!-- 有些恶心的回到开头小技巧 -->
-    <br>
-    <br>
+{% extends 'base.html' %}
+{% block title %}{{ title }}{% endblock %}
+{% block content %}
     <!-- 文章正文 -->
     {{ content | safe }}
-  </body>
-</html>
+{% endblock %}
