--- a/spwb/templates/index.html
+++ b/spwb/templates/index.html
@@ -1,10 +1,29 @@
 {% extends 'base.html' %}
 {% block content %}
-<br><br><br>
+<!--
+<br>
 <ul>
-    {% for i in arts %}
-    <li><a href="/p/{{ i[0] }}"></a>{{i[1]}}</li>   <!-- 文章id和标题 -->
-    {% endfor %}
+    
+    <li><a href="/p/</a></li>
+    
 </ul>
-
+-->
+{% for i in arts %}
+<div class="row">
+    <div class="col s12 m6">
+      <div class="card orange accent-2">
+        <div class="card-content white-text">
+          <span class="card-title"><a href="/p/{{ i[0] }}">{{ i[1] }}</a></span>
+          <p>我是一个很简单的卡片。我很擅长于包含少量的信息。我很方便，因为我只需要一个小标记就可以...
+              <a href="/p/{{ i[0] }}">阅读全文</a></p>
+        </div>
+        <!--
+        <div class="card-action">
+          <a href="#">这是一个链接</a>
+          <a href="#">这是一个链接</a>
+        </div>-->
+      </div>
+    </div>
+  </div>
+  {% endfor %}
 {% endblock %}
