--- a/spwb/templates/index.html
+++ b/spwb/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from "macros.html" import pagination %}
 {% block content %}
 <!--
 <br>
@@ -9,7 +10,8 @@
 </ul>
 -->
 {% for i in arts %}
-<div class="row">
+<div>
+  <div class="row">
     <div class="col s12 m6">
       <div class="card orange accent-2">
         <div class="card-content white-text">
@@ -25,5 +27,8 @@
       </div>
     </div>
   </div>
+</div>
+
+{{ pagination(url='/', end=end, int=int, request=request) }}
   {% endfor %}
 {% endblock %}
