修改分页的bug，新增生成虚拟数据的功能。

--- a/spwb/templates/base.html
+++ b/spwb/templates/base.html
@@ -16,7 +16,7 @@
     {% block styles %}{% endblock %}
     {% endblock head %}
   </head>
-  <body>
+  <body background="../static/spikes.png">
     <nav class="nav-wrapper blue lighten-1">
         
         <ul id="nav-mobile" class="left hide-on-med-and-down">
