--- a/spwb/templates/base.html
+++ b/spwb/templates/base.html
@@ -17,7 +17,7 @@
     {% endblock %}
     {% endblock head %}
   </head>
-  <body <!--background="../static/spikes.png"--></body>
+  <body <!--background="../static/spikes.png"-->
     <nav class="nav-wrapper blue lighten-1">
         
         <ul id="nav-mobile" class="left hide-on-med-and-down" style="font-family: 宋体;"> 
