--- a/spwb/templates/admin/login.html
+++ b/spwb/templates/admin/login.html
@@ -7,17 +7,18 @@
     <!-- 新 Bootstrap4 核心 CSS 文件 -->
     <link
       rel="stylesheet"
-      href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+      href="/static/bootstrap/css/bootstrap.min.css"
     />
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/static/jquery.min.js"></script>
     <!-- bootstrap.bundle.min.js 用于弹窗、提示、下拉菜单，包含了 popper.min.js -->
     <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <!-- 最新的 Bootstrap4 核心 JavaScript 文件 -->
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
   </head>
 
-    <body>
+    <body style="font-family: 宋体,consolas;font-size: 20px;">
+      <h1>登录</h1>
         <form method="POST">
             {{ form.csrf_token }}
             <div class="form-group">
